change css to make inline code more visible and remove padding from first line of codeblock, and fix favicon

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -37,9 +37,14 @@ a:hover {
 pre {
   font-size: 9pt;
 /*  width: 900px; */
+
+
+
   padding: 5px;
   padding-right: 10px;
   padding-left: 10px;
+  
+
   margin: 5px;
   margin-top: 20px;
   margin-bottom: 30px;
@@ -130,8 +135,7 @@ code {
   border-radius: .15em;
   -moz-border-radius: .15em;
   -webkit-border-radius: .15em;
-  padding-left: .25em;
-  padding-right: .25em;
+  padding: 0.1em 0.25em;
   color: #F8F8F8;
   font: 1em/1.3em 'Lucida Console','courier new',monospace;
 }
